Color deviation from schedule, open form for second shift if first shift exists

--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -189,6 +189,13 @@ td.holiday {
         .form-label {
             font-weight: 500;
         }
+        #deviation {
+            background-color: rgba(255, 0, 0, 0.5); /* Crvenkasta pozadina */
+            font-weight: bold;
+        }
+        .secondShift:hover {
+            background: rgba(255, 193, 7, 0.8) !important;
+        }
 
 
     </style>
