--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -190,7 +190,7 @@ td.holiday {
             font-weight: 500;
         }
         #deviation {
-            background-color: rgba(255, 0, 0, 0.5); /* Crvenkasta pozadina */
+            background-color: #FFA500;
             font-weight: bold;
         }
         .secondShift:hover {
@@ -274,7 +274,7 @@ td.holiday {
                 </div>
                 <div class="d-flex justify-content-end mb-3">
 <!--                    <buton class="btn btn-info me-1">Posebne vrste rada</buton>-->
-                    <buton class="btn btn-warning">Predaj evidenciju</buton>
+                    <buton class="btn btn-dark">Predaj evidenciju</buton>
                 </div>
             </div>
         </div>
