fix double insert

--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -319,6 +319,7 @@ td.holiday {
                             </div>
                       <form id="workTimeForm" action="/employee/workhour/process">
                                 <input type="hidden" name="selectedColumn" id="selectedColumn">
+                                <input type="hidden" name="workingTimeId" id="workingTimeId">
                             <div class="mb-3">
                                 <label for="startShift" class="form-label">Početak radnog vremena</label>
                                 <input type="datetime-local" class="form-control" id="startShift" name="startShift" required step="3600">
