--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -366,18 +366,10 @@ td.holiday {
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-<!--    document.getElementById('obrisiButton').addEventListener('click', function(event) {-->
-<!--        event.preventDefault();-->
-<!--        document.getElementById('workTimeForm').action = '/employee/workhour/remove';-->
-<!--        document.getElementById('workTimeForm').submit();-->
-<!--    });-->
-</script>
-
-<script type="module" th:src="@{/scripts/calendarDisplay.js}"></script>
+<script th:src="@{/scripts/calendarDisplay.js}"></script>
 <script th:src="@{/scripts/employeeWorkHoursFormDisplay.js}"></script>
-<script type="module" th:src="@{/scripts/employeeWorkHoursFormRules.js}"></script>
-<script type="module" th:src="@{/scripts/ajax.js}"></script>
+<script th:src="@{/scripts/employeeWorkHoursFormRules.js}"></script>
+<script th:src="@{/scripts/employeeRenderWorkHoursTable.js}"></script>
 
 </body>
 </html>
