--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -365,7 +365,8 @@ td.holiday {
 <script th:src="@{/scripts/calendarDisplay.js}"></script>
 <script th:src="@{/scripts/employeeWorkHoursFormDisplay.js}"></script>
 <script th:src="@{/scripts/employeeWorkHoursFormRules.js}"></script>
-<script th:src="@{/scripts/headNurseRenderWorkHoursTable.js}"></script>
+<script type="module" th:src="@{/scripts/renderWorkHoursTable.js}"></script>
+<script type="module" src="/scripts/headNurseLoadWorkHoursData.js" th:attr="src=@{/scripts/headNurseLoadWorkHoursData.js}"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
