--- a/src/main/resources/templates/head_nurse_employee_list.html
+++ b/src/main/resources/templates/head_nurse_employee_list.html
@@ -16,7 +16,6 @@
         }
         .nav-link.active {
             border-bottom: 3px solid #000000;
-            font-weight: bold;
         }
         .info-section {
             background-color: #ffffff;
@@ -105,7 +104,7 @@
             <img src="/logo.png" style="height: 50px; width:100px" class="me-5" alt="Logo">
             <a class="nav-link active me-4" href="/head_nurse/employee/list">Zaposlenici</a>
             <a class="nav-link me-4" href="#">Raspored</a>
-            <a class="nav-link me-4" href="#">Izvještaj</a>
+            <a class="nav-link me-4" href="/head_nurse/workhour/report">Izvještaj</a>
         </div>
         <div class="navbar-nav ms-auto d-flex align-items-center">
             <div class="d-flex align-items-center me-3">
