remove big decimal

--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -360,6 +360,7 @@ td.holiday {
                     <div class="tab-pane fade" id="overtime" role="tabpanel">
                         <h4 class="mb-4 text-center">Unos prekovremenog rada</h4>
                         <form id="overtimeForm" action="/head_nurse/employee/workhour/overtime">
+                            <input type="hidden" th:value="${employee.id}" id="employeeIdOvertime" name="employeeIdOvertime">
                             <div class="mb-3">
                                 <label for="overtimeStart" class="form-label">Početak prekovremenog rada</label>
                                 <input type="datetime-local" class="form-control" id="overtimeStart" name="overtimeStart" required step="3600">
