Generate excel report

--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -257,8 +257,10 @@ td.holiday {
         </div>
     </div>
 </nav>
+<div style="background-color: white; margin-left: 12px; margin-right: 12px;">
+    <button onclick="location.href = '/head_nurse/employee/list'" class="btn btn-dark ms-3 mt-2" style="width: 90px">Natrag</button>
+</div>
 
-<button onclick="location.href = '/head_nurse/employee/list'" class="btn btn-dark ms-3 mt-2" style="width: 90px">Natrag</button>
 
 <div class="container-fluid">
     <!-- Employee Info -->
