--- a/src/main/resources/templates/head_nurse_workhour_report.html
+++ b/src/main/resources/templates/head_nurse_workhour_report.html
@@ -98,41 +98,40 @@
             <h5 class="mb-0">Izvještaj radnih sati</h5>
         </div>
         <div class="card-body p-3">
-            <div class="row g-3 align-items-center">
-                <div class="col-md-3">
-                    <label class="form-label">Ispostava</label>
-                    <select class="form-select" id="branchSelect">
-                        <option value="">Odaberite ispostavu</option>
-                        <option value="1">Krapina</option>
-                        <option value="2">Zabok</option>
-                        <option value="3">Pregrada</option>
-                        <option value="4">Klanjec</option>
-                        <option value="5">Zlatar</option>
-                    </select>
+            <form action="/head_nurse/workhour/report/download">
+                <div class="row g-3 align-items-center">
+                    <div class="col-md-3">
+                        <label class="form-label">Ispostava</label>
+                        <select class="form-select" id="branchSelect">
+                            <option value="">Odaberite ispostavu</option>
+                            <option value="1">Krapina</option>
+                            <option value="2">Zabok</option>
+                            <option value="3">Pregrada</option>
+                            <option value="4">Klanjec</option>
+                            <option value="5">Zlatar</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Zaposlenik</label>
+                        <select class="form-select" id="employeeId" name="employeeId">
+                            <option value="">Svi zaposlenici</option>
+                            <option value="1">Luka Novak</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Mjesec i godina</label>
+                        <input type="month" class="form-control" id="monthYearSelect" name="monthYearSelect">
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <label class="form-label">Zaposlenik</label>
-                    <select class="form-select" id="employeeSelect">
-                        <option value="">Svi zaposlenici</option>
-                    </select>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <button type="submit" class="btn btn-dark w-100">Generiraj izvještaj</button>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <label class="form-label">Mjesec i godina</label>
-                    <input type="month" class="form-control">
-                </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col-md-3">
-                    <button class="btn btn-dark w-100" onclick="generateReport()">Generiraj izvještaj</button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
-
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
