--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -266,6 +266,10 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-end mb-3">
+
+                    <!-- Period Status O S or Z -->
+                    <!-- kombinacije period_radnik i period -->
+
                     <buton class="btn btn-primary me-1" id="absenceButton">Odsutnosti</buton>
                     <!-- stavi status u Z -->
                     <buton class="btn btn-dark">Predaj evidenciju</buton>
