--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -248,8 +248,9 @@
                         <div class="col-md-6 d-flex justify-content-center">
                             <input type="month" id="monthYearSelection">
                         </div>
-                        <div class="col-md-6 d-flex justify-content-center">
+                        <div class="col-md-6 d-flex flex-column text-start">
                             <p class="mb-0 ps-4"><strong>Propisani mjesečni fond sati:</strong>&nbsp;<span id="prescribed-hours">184</span></p>
+                            <p class="mb-0 ps-4"><strong>Status:</strong>&nbsp;<span>O</span></p>
                         </div>
                     </div>
                 </div>
