--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -280,11 +280,14 @@ td.holiday {
                 </div>
                 <div class="container info-section pb-3 pt-2">
                     <div class="row align-items-center justify-content-center text-center">
-                        <div class="col-md-6 d-flex justify-content-center">
+                        <div class="col-md-4 d-flex justify-content-center">
                             <input type="month" id="monthYearSelection">
                         </div>
-                        <div class="col-md-6 d-flex justify-content-center">
-                            <p class="mb-0 ps-4"><strong>Propisani mjesečni fond sati:</strong>&nbsp;<span id="prescribed-hours">184</span></p>
+                        <div class="col-md-4 d-flex justify-content-center">
+                            <p class="mb-0 ps-4"><strong>Propisani mjesečni fond sati:</strong>&nbsp;<span id="prescribed-hours">0</span></p>
+                        </div>
+                        <div class="col-md-4 d-flex justify-content-center">
+                            <p class="mb-0 ps-4"><strong>Ukupno ovaj mjesec: </strong>&nbsp;<span id="totalSum">0</span></p>
                         </div>
                     </div>
                 </div>
