--- a/src/main/resources/templates/head_nurse_workhour_report.html
+++ b/src/main/resources/templates/head_nurse_workhour_report.html
@@ -102,13 +102,16 @@
                 <div class="row g-3 align-items-center">
                     <div class="col-md-3">
                         <label class="form-label">Ispostava</label>
-                        <select class="form-select" id="branchSelect">
+                        <select class="form-select" id="orgUnit" name="orgUnit">
                             <option value="">Odaberite ispostavu</option>
                             <option value="1">Krapina</option>
                             <option value="2">Zabok</option>
                             <option value="3">Pregrada</option>
-                            <option value="4">Klanjec</option>
+                            <option value="4">Donja Stubica</option>
                             <option value="5">Zlatar</option>
+                            <option value="6">Klanjec</option>
+                            <option value="7">Konjšćina</option>
+                            <option value="8">Marija Bistrica</option>
                         </select>
                     </div>
                     <div class="col-md-3">
