--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1092,7 +1092,7 @@
         <h2 class="section-title">Pogledajte kako sustav radi</h2>
         <div class="demo-container">
             <video controls width="1000">
-                <source src="demo.mp4" type="video/mp4">
+                <source src="/demo.mp4" type="video/mp4">
                 Vaš preglednik ne podržava HTML5 video.
             </video>
         </div>
