--- a/src/main/resources/templates/head_nurse_workhour_report.html
+++ b/src/main/resources/templates/head_nurse_workhour_report.html
@@ -165,6 +165,107 @@
     </div>
 </div>
 
+<div class="container mt-4">
+
+    <div th:each="orgUnitReport : ${orgUnitReport}" class="card mb-4">
+        <!-- Kartica za zaposlenika -->
+        <div class="card-header bg-dark text-white">
+            <h5 class="mb-0" th:text="${orgUnitReport.orgUnitName}"></h5>
+        </div>
+        <div class="card-body">
+            <p><strong>Period:</strong> <span th:text="${orgUnitReport.month + '/' + orgUnitReport.year}"></span></p>
+
+            <!-- Tablica sa satima -->
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead class="table-light">
+                    <tr>
+                        <th>Vrsta rada</th>
+                        <th class="text-end">Ukupno sati</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Redovan rad</td>
+                        <td class="text-end"
+                            th:text="${orgUnitReport.redovanRad % 1 == 0 ? #numbers.formatInteger(orgUnitReport.redovanRad, 0) : #numbers.formatDecimal(orgUnitReport.redovanRad, 1, 1, 'POINT')}">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Prekovremeni rad</td>
+                        <td class="text-end"
+                            th:text="${orgUnitReport.prekovremeniRad != null ? (orgUnitReport.prekovremeniRad % 1 == 0 ? #numbers.formatInteger(orgUnitReport.prekovremeniRad, 0) : #numbers.formatDecimal(report.prekovremeniRad, 1, 1, 'POINT')) : 0}">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Odsustva</td>
+                        <td class="text-end"
+                            th:text="${orgUnitReport.odsustva != null ? (orgUnitReport.odsustva % 1 == 0 ? #numbers.formatInteger(orgUnitReport.odsustva, 0) : #numbers.formatDecimal(report.odsustva, 1, 1, 'POINT')) : 0}">
+                        </td>
+                    </tr>
+                    <tr class="table-secondary">
+                        <td><strong>UKUPNO SATI</strong></td>
+                        <td class="text-end">
+                            <strong th:text="${orgUnitReport.ukupno % 1 == 0 ? #numbers.formatInteger(orgUnitReport.ukupno, 0) : #numbers.formatDecimal(orgUnitReport.ukupno, 1, 1, 'POINT')}"></strong>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div th:each="report : ${reports}" class="card mb-4">
+        <!-- Kartica za zaposlenika -->
+        <div class="card-header bg-dark text-white">
+            <h5 class="mb-0" th:text="${report.firstName + ' ' + report.lastName}"></h5>
+        </div>
+        <div class="card-body">
+            <p><strong>Period:</strong> <span th:text="${report.month + '/' + report.year}"></span></p>
+            <p><strong>Ispostava:</strong> <span th:text="${report.orgUnitName}"></span></p>
+
+            <!-- Tablica sa satima -->
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <thead class="table-light">
+                    <tr>
+                        <th>Vrsta rada</th>
+                        <th class="text-end">Ukupno sati</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Redovan rad</td>
+                        <td class="text-end"
+                            th:text="${report.redovanRad % 1 == 0 ? #numbers.formatInteger(report.redovanRad, 0) : #numbers.formatDecimal(report.redovanRad, 1, 1, 'POINT')}">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Prekovremeni rad</td>
+                        <td class="text-end"
+                            th:text="${report.prekovremeniRad != null ? (report.prekovremeniRad % 1 == 0 ? #numbers.formatInteger(report.prekovremeniRad, 0) : #numbers.formatDecimal(report.prekovremeniRad, 1, 1, 'POINT')) : 0}">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Odsustva</td>
+                        <td class="text-end"
+                            th:text="${report.odsustva != null ? (report.odsustva % 1 == 0 ? #numbers.formatInteger(report.odsustva, 0) : #numbers.formatDecimal(report.odsustva, 1, 1, 'POINT')) : 0}">
+                        </td>
+                    </tr>
+                    <tr class="table-secondary">
+                        <td><strong>UKUPNO SATI</strong></td>
+                        <td class="text-end">
+                            <strong th:text="${report.ukupno % 1 == 0 ? #numbers.formatInteger(report.ukupno, 0) : #numbers.formatDecimal(report.ukupno, 1, 1, 'POINT')}"></strong>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
