--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -191,6 +191,9 @@
             font-size: 20px;
             font-weight: bold;
         }
+        #posebneVrsteRada{
+            background-color: #ff00000d;
+        }
     </style>
 </head>
 <body>
