Added WorkHourReport for OrgUnit and AllOrgUnits

--- a/src/main/resources/templates/head_nurse_workhour_report.html
+++ b/src/main/resources/templates/head_nurse_workhour_report.html
@@ -66,6 +66,7 @@
             <img src="/logo.png" style="height: 50px; width:100px" class="me-5">
             <a class="nav-link me-4" href="/head_nurse/employee/list">Zaposlenici</a>
             <a class="nav-link me-4 active" href="/head_nurse/workhour/report">Izvještaj</a>
+            <a class="nav-link me-4" href="/head_nurse/statistics">Statistika</a>
         </div>
 
         <div class="navbar-nav ms-auto d-flex align-items-center">
