--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -273,7 +273,7 @@
                 </div>
                 <div class="d-flex justify-content-end mb-3">
                     <buton class="btn btn-primary me-1" id="absenceButton">Odsutnosti</buton>
-                    <buton class="btn btn-dark">Predaj evidenciju</buton>
+<!--                    <buton class="btn btn-dark">Predaj evidenciju</buton>-->
                 </div>
             </div>
         </div>
