--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -52,7 +52,7 @@ td.weekend {
 
 /* Style for holidays */
 td.holiday {
-    background-color: #ffeb3b;  /* Yellow background */
+    background-color: #ffeb3b94;  /* Yellow background */
     /* color: #1976d2;   Blue color for text */
 }
 
@@ -189,7 +189,7 @@ td.holiday {
             font-weight: 500;
         }
         #deviation {
-            background-color: #ffd254;
+            background-color: #ffc857a6;
             font-weight: bold;
         }
         .secondShift:hover {
@@ -224,7 +224,6 @@ td.holiday {
 </head>
 <body>
 <div id="overlay"></div>
-
 
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
@@ -318,6 +317,7 @@ td.holiday {
         </table>
     </div>
 </div>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
